--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="TERFXEcqJ0aLcPni6tHfXc4jsNezhh_CVlrxmoGq4a0"
+    />
     <title>반응형 웹페이지 실습 스터디</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/global.css" />
