--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
       <h1>ANNA WINTER</h1>
       <ul>
         <li>
-          <a href="#">이메일</a>
+          <a href="mailto:9ouo9pp@gmail.com">이메일</a>
         </li>
         <li>
-          <a href="#">깃허브</a>
+          <a
+            href="https://github.com/9ouo9pp/responsive-page-sample"
+            target="_blank"
+            >깃허브</a
+          >
         </li>
         <li>
           <a href="#">유튜브</a>
@@ -291,5 +295,16 @@
         </article>
       </section>
     </main>
+
+    <!-- modal -->
+    <div id="modal">
+      <div class="modal-inner">
+        <p>
+          이 사이트는 스터디 목적으로 제작되었습니다. 문제 발생 시 연락 주시면
+          조치하겠습니다.
+        </p>
+        <div class="modal-close">CLOSE</div>
+      </div>
+    </div>
   </body>
 </html>
