--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     />
     <!-- Twitter Card -->
     <meta name="twitter:card" content="img/preview-img.png" />
-    <meta name="twitter:title" content="Andrew의 포트폴리오 웹사이트" />
+    <meta name="twitter:title" content="Anna의 포트폴리오 웹사이트" />
     <meta
       name="twitter:description"
       content="Anna의 포트폴리오 웹사이트입니다. 반응형 웹 디자인, 웹 퍼블리싱, 영상 편집 등 다양한 작업물을 확인하실 수 있습니다."
